--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -114,10 +114,6 @@ footer {
         }
 
         @media (max-width: 600px) {
-            font-size: 0.6em;
-        }
-
-        @media (max-width: 400px) {
             font-size: 0.4em;
         }
 
